style: 💄 some changes in the sidebar, fixed overflow x in the body

--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,13 @@
 html {
     padding: 0;
     margin: 0;
-    overflow-x: hidden !important;
 }
-
+a {
+    text-decoration: none;
+    color: black;
+}
 body {
+    overflow-x: hidden !important;
     padding: 0;
     margin: 0;
     display:grid;
@@ -22,15 +25,21 @@ body {
     grid-area: header;
     z-index: 600;
     position: absolute;
-    left: -300px;
-    transition: 0.5s ease;
+    left: -250px;
+    transition: 0.3s ease;
 }
 
 .sidebar {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
     z-index: inherit;
-    width: 300px;
+    width: 240px;
     height: 100vh;
     background-color: white;
+    padding-top: 16px;
+    padding-left: 26px;
+
 }
 
 #sidebar-background {
@@ -74,6 +83,7 @@ header {
 .rigth_header-desktop {
     margin-left: 130px;
     flex-shrink: 0;
+    padding-right: 30px;
     /*Para que no se monten los botones uno encima de otro*/
 }
 .rigth_header-mobile {
@@ -157,16 +167,21 @@ header {
     cursor: pointer;
 }
 
-.bx-menu {
+.bx-menu-header {
     font-size: 25px;
     margin-right: 10px;
     cursor: pointer;
     padding: 10px;
 }
-
-.bx-menu:hover {
+.bx-menu-header:hover {
     background-color: var(--grey);
     border-radius: 100%;
+}
+
+.bx-menu-sidebar{
+    font-size: 25px;
+    margin-right: 10px;
+    cursor: pointer;
 }
 
 .bx-camera-movie {
